Fix invisible tags

--- a/src/templates/PostPage/postPage.module.scss
+++ b/src/templates/PostPage/postPage.module.scss
@@ -165,7 +165,7 @@
   }
 
   .sideTags {
-    display: block;
+    display: block !important;
   }
 
   .inBodyDate {
